# net

./: .gitignore  .prettierrc  Cargo.toml  Dockerfile  LICENSE  README.md  README.txt  askama.toml  build.rs  next.config.js  package-lock.json  package.json  readme.txt  tailwind.config.mjs  tailwind.config.ts  vercel.json
.github/workflows/: deploy.yaml
components/: FeatherIcon.tsx  SEO.tsx
components/EducationChapter/: EducationChapter.module.scss  EducationChapter.tsx
components/Footer/: Footer.module.scss  Footer.tsx
components/GalleryPhoto/: GalleryPhoto.module.scss  GalleryPhoto.tsx
components/Icons/: IconBookOpen.tsx  IconCheckSquare.tsx  IconClipboard.tsx  IconCode.tsx  IconCommand.tsx  IconExternalLink.tsx  IconFilm.tsx  IconGift.tsx  IconGitHub.tsx  IconHeart.tsx  IconHome.tsx  IconLink.tsx  IconList.tsx  IconMoon.tsx  IconOriginalGithub.tsx  IconOriginalSteam.tsx  IconOriginalTwitter.tsx  IconSearch.tsx  IconServer.tsx  IconShield.tsx  IconSliders.tsx  IconSquare.tsx  IconStar.tsx  IconSun.tsx  IconThumbsUp.tsx  IconTwitter.tsx  IconUser.tsx  IconVolume2.tsx
components/InfoPageContentBox/: InfoPageContentBox.module.scss  InfoPageContentBox.tsx
components/ListLink/: ListLink.module.scss  ListLink.tsx
components/Navigation/: Navigation.module.scss  Navigation.tsx
components/Profile/: Profile.module.scss  Profile.tsx
components/ProfileCards/: ProfileCards.module.scss  ProfileCards.tsx
components/Project/: Project.module.scss  Project.tsx
data/: accounts.json  config.json  links.json
lib/: age.ts
pages/: 404.tsx  _app.tsx  _document.tsx  blog.tsx  index.tsx  info.tsx  legacyindex.tsx  links.tsx  projects.tsx  read.tsx
public/: 404.html  CNAME  index.html
src/: App.vue  featured.rs  main.rs  splashes.rs  tailwind.rs  website.rs
src/api/: auth.rs  featured.rs  minecraftquery.rs  mod.rs  reflinks.rs  sourcequery.rs  splash.rs  users.rs
src/app/: globals.css  layout.tsx  page.tsx
src/authcrypto/: auth.rs  mod.rs
src/components/: GenericCard.tsx  HelloWorld.vue  IndexCard.tsx  Navigation.tsx  PageBanner.tsx  Profile.tsx  card.vue  (+5 more)
styles/: global.scss  master.scss
wasm-qr/: Cargo.toml
wasm-qr/src/: lib.rs
web/: base.html  config.toml  files.html  footer.html  index.html  input.css  next.html  not-found.html  notfound.html  qr.html  service-status.html  tailwind.input.css  textfile.txt
(+101 files in other folders)
