[package]
name = "net"
version = "0.1.0"
edition = "2024"

[dependencies]
a2s = "0.5.2"
askama = "0.14.0"
axum = { version = "0.8.1", features = ["macros"] }
chrono = "0.4.41"
chrono-tz = "0.10.4"
dotenvy = "0.15.7"
# hex = "0.4.3"
hickory-resolver = "0.25.2"
include_dir = "0.7.4"
mc-query = "2.0.0"
mime_guess = "2.0.5"
rand = "0.9.1"
# rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_with = "3.14.0"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
tower = { version = "0.5.2", features = ["full"] }
tower-http = { version = "0.6.2", features = ["full"] }
ubyte = "0.10.4"
