[package]
name = "wasm-qr"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
image = "0.25.8"
qrcode = "0.14.1"
wasm-bindgen = "0.2.105"
web-sys = { version = "0.3.82", features = ["Blob", "BlobPropertyBag", "Document", "Element", "Event", "EventTarget", "HtmlAnchorElement", "HtmlButtonElement", "HtmlElement", "HtmlImageElement", "HtmlInputElement", "Storage", "Url", "Window", "console"] }
